hphp/hack/test/typecheck/new_inference/string_expressions6.php.exp
File "string_expressions6.php", line 14, characters 19-23:
This is an array key (int/string) (Typing[4110])
  File "string_expressions6.php", line 13, characters 37-39:
  It is incompatible with an object of type Meh
